[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_06/Pawn_06_Part_Head.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_06/Pawn_06_Part_Body.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_06/Pawn_06_Part_Face.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_06/Pawn_06_Part_Arm.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Pawns/Pawn_06/Parts/Pawn_06_Part_Hover.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Pawns/Pawn_06_Parts/Pawn_06_Pic.gd" type="Script" id=6]

[node name="Pawn_06_Pic" type="Node2D"]
script = ExtResource( 6 )

[node name="Pawn_06_Part_Hover" parent="." instance=ExtResource( 5 )]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 16 )
scale = Vector2( 4, 4 )

[node name="Sprite_Head" type="Sprite" parent="."]
position = Vector2( 3, -12 )
texture = ExtResource( 1 )
hframes = 6

[node name="Sprite_Face" type="Sprite" parent="Sprite_Head"]
position = Vector2( 0, -1 )
texture = ExtResource( 3 )
vframes = 2
hframes = 8
frame = 2

[node name="Sprite_Body" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 7

[node name="Sprite_Arm" type="Sprite" parent="."]
position = Vector2( 12, 0 )
texture = ExtResource( 4 )
hframes = 3
frame = 1
